# myCC

./: CMakeLists.txt  README.md  cmake-options.txt
ccViewer/: main.cpp
cmake/: Install.cmake
libs/CCAppCommon/src/: ccTranslationManager.cpp
libs/qCC_db/src/: ccObject.cpp
libs/qCC_glWindow/: CMakeLists.txt
libs/qCC_glWindow/src/: ccGLWindow.cpp  ccGLWindowInterface.cpp
libs/qCC_io/src/: FileIOFilter.cpp
qCC/: main.cpp  mainwindow.cpp
